# seminar

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
scripts/: migrate_slugs.py  migrate_to_sqlite_body.py
src/seminar/: cli.py  config.py  db.py  markdown.py
src/seminar/migrations/: 001_initial_schema.py  002_initial_expectations.py  003_annotations.py  004_messages.py  005_threads.py  __init__.py
src/seminar/providers/: __init__.py  claude_code.py  codex.py  types.py
src/seminar/server/: broadcast.py  dependencies.py  server.py  thread_responder.py  worker_serialization.py
src/seminar/server/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/seminar/server/routers/: annotations.py  ideas.py  messages.py  proposals.py  studies.py  system.py  threads.py  workers.py
src/seminar/service/: __init__.py  annotations.py  ideas.py  initial_expectations.py  messages.py  proposals.py  runs.py  search.py  studies.py  threads.py  types.py
src/seminar/skills/: __init__.py  connective-research.md  follow-up-research.md  initial-exploration.md  thread-responder.md
src/seminar/workers/: __init__.py  agent.py  connective_research.py  factory.py  research.py  scheduler.py  types.py  workspace.py
tests/: test_markdown.py  test_skill_installation.py  test_study_service.py
tests/cli/: test_skill_installation.py
tests/server/: test_thread_responder.py
tests/service/: test_annotations.py  test_ideas.py  test_proposals.py  test_runs.py  test_search.py  test_studies.py
(+51 files in other folders)
