[project]
name = "seminar"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[project.scripts]
seminar = "seminar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seminar"]

[dependency-groups]
dev = ["pytest>=8.0", "basedpyright>=1.29.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
